implemented create and get review functionality then updated the products/list endpoint
