# internal/core/dto/product.go
@@ -20,7 +20,9 @@ type ProductItem struct {
 	ID         int             `json:"product_item_id"`
 	ProductID  int             `json:"product_id"`
 	ColorID    *int            `json:"color_id"`
+	SizeID     *int            `json:"size_id"`
 	Price      decimal.Decimal `json:"price"`
+	Discount   decimal.Decimal `json:"discount"`
 	QtyInStock *int            `json:"qty_in_stock"`
 	ImageUrl   string          `json:"image_url"`
 }
